--- a/rules.conf
+++ b/rules.conf
@@ -19,41 +19,148 @@ dns-server = 119.29.29.29, 223.5.5.5, 114.114.114.114
 # stub proxy to stop surge complaining, leave this.
 [Proxy]
 #Proxy = https, 1.2.3.4, 1234
-Proxy = custom, 1.2.3.4, 443, aes-256-cfb, password, https://github.com/a1ickgu0/surge-ss-conf/raw/master/SSEncrypt.module
+Proxy = custom, 1.2.3.4, 443, aes-256-cfb, password, https://github.com/kirajun/surge-ss-conf/raw/master/SSEncrypt.module
 
 [Rule]
 # Accelerate most visited sites, part 1
 DOMAIN-KEYWORD, ali, DIRECT
 DOMAIN-KEYWORD, taobao, DIRECT
 
-# Block privacy tracker within apps
-DOMAIN, monitor.uu.qq.com, REJECT
-DOMAIN, pagead2.googlesyndication.com, REJECT
-DOMAIN, cpro.baidu.com, REJECT
-DOMAIN, pingma.qq.com, REJECT
-DOMAIN, stat.m.jd.com, REJECT
-DOMAIN, ads.mopub.com, REJECT
-# Prevent stream services from displaying ads
-DOMAIN, ad.api.3g.youku.com, REJECT
-DOMAIN, atm.youku.com, REJECT
-DOMAIN, lives.l.qq.com, REJECT
-DOMAIN, ark.letv.com, REJECT
-DOMAIN, asimgs.pplive.cn, REJECT
-# Disable customized fonts
-DOMAIN, fonts.googleapis.com, REJECT
-# Prevent sniffer from a public WiFi
-DOMAIN, init.icloud-analysis.com, REJECT
-# Other privacy trackers
-DOMAIN-KEYWORD, umeng.co, REJECT
-DOMAIN-KEYWORD, flurry.co, REJECT
-DOMAIN-KEYWORD, cnzz, REJECT
-DOMAIN-SUFFIX, mmstat.com, REJECT
-DOMAIN-SUFFIX, doubleclick.net, REJECT
-DOMAIN-SUFFIX, youmi.net, REJECT
-DOMAIN-SUFFIX, beacon.qq.com, REJECT
-DOMAIN-SUFFIX, mob.com, REJECT
-DOMAIN-SUFFIX, 127.net, REJECT
-DOMAIN-SUFFIX, sinajs.cn, REJECT
+# Block ADs
+DOMAIN-KEYWORD,adsmogo,REJECT
+DOMAIN-KEYWORD,analytics,REJECT
+DOMAIN-KEYWORD,openx,REJECT
+DOMAIN-KEYWORD,trace,REJECT
+DOMAIN-KEYWORD,track,REJECT
+DOMAIN-KEYWORD,traffic,REJECT
+DOMAIN-KEYWORD,usage,REJECT
+
+DOMAIN-SUFFIX,127.net,REJECT
+DOMAIN-SUFFIX,51.la,REJECT
+DOMAIN-SUFFIX,acs86.com,REJECT
+DOMAIN-SUFFIX,ad.unimhk.com,REJECT
+DOMAIN-SUFFIX,adchina.com,REJECT
+DOMAIN-SUFFIX,adcome.cn,REJECT
+DOMAIN-SUFFIX,adinfuse.com,REJECT
+DOMAIN-SUFFIX,adjust.com,REJECT
+DOMAIN-SUFFIX,admaster.com.cn,REJECT
+DOMAIN-SUFFIX,admob.com,REJECT
+DOMAIN-SUFFIX,admaster.com.cn,REJECT
+DOMAIN-SUFFIX,admob.com,REJECT
+DOMAIN-SUFFIX,ads.genieessp.com,REJECT
+DOMAIN-SUFFIX,ads.mobclix.com,REJECT
+DOMAIN-SUFFIX,ads.yahoo.com,REJECT
+DOMAIN-SUFFIX,adsage.cn,REJECT
+DOMAIN-SUFFIX,adsage.com,REJECT
+DOMAIN-SUFFIX,aduu.cn,REJECT
+DOMAIN-SUFFIX,adview.cn,REJECT
+DOMAIN-SUFFIX,adwhirl.com,REJECT
+DOMAIN-SUFFIX,adwo.com,REJECT
+DOMAIN-SUFFIX,adxmi.com,REJECT
+DOMAIN-SUFFIX,adzerk.net,REJECT
+DOMAIN-SUFFIX,allyes.com,REJECT
+DOMAIN-SUFFIX,anquan.org,REJECT
+DOMAIN-SUFFIX,appads.com,REJECT
+DOMAIN-SUFFIX,applifier.com,REJECT
+DOMAIN-SUFFIX,appsflyer.com,REJECT
+DOMAIN-SUFFIX,atm.youku.com,REJECT
+DOMAIN-SUFFIX,baidustatic.com,REJECT
+DOMAIN-SUFFIX,baifendian.com,REJECT
+DOMAIN-SUFFIX,beacon.qq.com,REJECT
+DOMAIN-SUFFIX,beacon.sina.com.cn,REJECT
+DOMAIN-SUFFIX,chartboost.com,REJECT
+DOMAIN-SUFFIX,cmcore.com,REJECT
+DOMAIN-SUFFIX,cnzz.com,REJECT
+DOMAIN-SUFFIX,coremetrics.com,REJECT
+DOMAIN-SUFFIX,cpro.baidustatic.com,REJECT
+DOMAIN-SUFFIX,domob.cn,REJECT
+DOMAIN-SUFFIX,domob.com.cn,REJECT
+DOMAIN-SUFFIX,domob.org,REJECT
+DOMAIN-SUFFIX,doubleclick.net,REJECT
+DOMAIN-SUFFIX,duomeng.cn,REJECT
+DOMAIN-SUFFIX,duomeng.net,REJECT
+DOMAIN-SUFFIX,duomeng.cn,REJECT
+DOMAIN-SUFFIX,duomeng.net,REJECT
+DOMAIN-SUFFIX,duomeng.org,REJECT
+DOMAIN-SUFFIX,flurry.com,REJECT
+DOMAIN-SUFFIX,googleadservices.com,REJECT
+DOMAIN-SUFFIX,googleadsserving.cn,REJECT
+DOMAIN-SUFFIX,googlesyndication.com,REJECT
+DOMAIN-SUFFIX,googletagservices.com,REJECT
+DOMAIN-SUFFIX,guohead.com,REJECT
+DOMAIN-SUFFIX,guomob.com,REJECT
+DOMAIN-SUFFIX,i-mobile.co.jp,REJECT
+DOMAIN-SUFFIX,ib.adnxs.com,REJECT
+DOMAIN-SUFFIX,icloud-analysis.com,REJECT
+DOMAIN-SUFFIX,immob.cn,REJECT
+DOMAIN-SUFFIX,inmobi.com,REJECT
+DOMAIN-SUFFIX,irs01.com,REJECT
+DOMAIN-SUFFIX,localytics.com,REJECT
+DOMAIN-SUFFIX,m.simaba.taobao.com,REJECT
+DOMAIN-SUFFIX,madmini.com,REJECT
+DOMAIN-SUFFIX,mixpanel.com,REJECT
+DOMAIN-SUFFIX,mmstat.com,REJECT
+DOMAIN-SUFFIX,mob.com,REJECT
+DOMAIN-SUFFIX,mobads-logs.baidu.com,REJECT
+DOMAIN-SUFFIX,mobads.baidu.com,REJECT
+DOMAIN-SUFFIX,pingtcss.qq.com,REJECT
+DOMAIN-SUFFIX,report.qq.com,REJECT
+DOMAIN-SUFFIX,responsys.net,REJECT
+DOMAIN-SUFFIX,sax.sina.cn,REJECT
+DOMAIN-SUFFIX,scorecardresearch.com,REJECT
+DOMAIN-SUFFIX,simaba.taobao.com,REJECT
+DOMAIN-SUFFIX,sinajs.cn,REJECT
+DOMAIN-SUFFIX,smartadserver.com,REJECT
+DOMAIN-SUFFIX,smartmad.com,REJECT
+DOMAIN-SUFFIX,stat.ws.126.net,REJECT
+DOMAIN-SUFFIX,smartmad.com,REJECT
+DOMAIN-SUFFIX,stat.ws.126.net,REJECT
+DOMAIN-SUFFIX,tajs.qq.com,REJECT
+DOMAIN-SUFFIX,tanx.com,REJECT
+DOMAIN-SUFFIX,tapjoyads.com,REJECT
+DOMAIN-SUFFIX,umeng.co,REJECT
+DOMAIN-SUFFIX,umeng.com,REJECT
+DOMAIN-SUFFIX,umeng.net,REJECT
+DOMAIN-SUFFIX,umtrack.com,REJECT
+DOMAIN-SUFFIX,union.youdao.com,REJECT
+DOMAIN-SUFFIX,ushaqi.com,REJECT
+DOMAIN-SUFFIX,uyunad.com,REJECT
+DOMAIN-SUFFIX,waps.cn,REJECT
+DOMAIN-SUFFIX,wiyun.com,REJECT
+DOMAIN-SUFFIX,wooboo.com.cn,REJECT
+DOMAIN-SUFFIX,wqmobile.com,REJECT
+DOMAIN-SUFFIX,wrating.com,REJECT
+DOMAIN-SUFFIX,x.jd.com,REJECT
+DOMAIN-SUFFIX,youmi.net,REJECT
+
+DOMAIN,acjs.aliyun.com,REJECT
+DOMAIN,ad.api.3g.tudou.com,REJECT
+DOMAIN,ad.api.3g.youku.com,REJECT
+DOMAIN,adash.m.taobao.com,REJECT
+DOMAIN,ads.mopub.com,REJECT
+DOMAIN,ark.letv.com,REJECT
+DOMAIN,asimgs.pplive.cn,REJECT
+DOMAIN,bam.nr-data.net,REJECT
+DOMAIN,cbjs.baidu.com,REJECT
+DOMAIN,counter.kingsoft.com,REJECT
+DOMAIN,cpro.baidu.com,REJECT
+DOMAIN,csi.gstatic.com,REJECT
+DOMAIN,dsp.youdao.com,REJECT
+DOMAIN,g.163.com,REJECT
+DOMAIN,dsp.youdao.com,REJECT
+DOMAIN,g.163.com,REJECT
+DOMAIN,iadsdk.apple.com,REJECT
+DOMAIN,js-agent.newrelic.com,REJECT
+DOMAIN,lives.l.qq.com,REJECT
+DOMAIN,monitor.uu.qq.com,REJECT
+DOMAIN,mtj.baidu.com,REJECT
+DOMAIN,pagead2.googlesyndication.com,REJECT
+DOMAIN,pingjs.qq.com,REJECT
+DOMAIN,pingma.qq.com,REJECT
+DOMAIN,pixel.wp.com,REJECT
+DOMAIN,sax.sina.cn,REJECT
+DOMAIN,stat.m.jd.com,REJECT
+DOMAIN,temp.163.com,REJECT
 
 # Accelerate most visited sites, part 2
 DOMAIN-SUFFIX, cn, DIRECT
@@ -64,7 +171,9 @@ DOMAIN-SUFFIX, 126.net, DIRECT
 DOMAIN-SUFFIX, netease.com, DIRECT
 DOMAIN-SUFFIX, gtimg.com, DIRECT
 DOMAIN-KEYWORD, baidu, DIRECT
-DOMAIN-KEYWORD, 360, DIRECT
+
+# ALL CN DIRECT
+DOMAIN-SUFFIX,cn,DIRECT
 
 # Some services are available locally
 DOMAIN-SUFFIX, ls.apple.com, DIRECT
@@ -81,13 +190,117 @@ DOMAIN-KEYWORD, aka, Proxy
 DOMAIN-KEYWORD, sohu, DIRECT
 DOMAIN-KEYWORD, qiyi, DIRECT
 
-# Force some domains which are fucked by GFW while resolving DNS
-DOMAIN-KEYWORD, google, Proxy, force-remote-dns
-DOMAIN-KEYWORD, facebook, Proxy, force-remote-dns
-DOMAIN-KEYWORD, youtube, Proxy, force-remote-dns
-DOMAIN-KEYWORD, twitter, Proxy, force-remote-dns
-DOMAIN-KEYWORD, gmail, Proxy, force-remote-dns
-DOMAIN-SUFFIX, twimg.com, Proxy, force-remote-dns
+# BLOCKED SITES
+DOMAIN-KEYWORD,blogspot,Proxy,force-remote-dns
+DOMAIN-KEYWORD,facebook,Proxy,force-remote-dns
+DOMAIN-KEYWORD,google,Proxy,force-remote-dns
+DOMAIN-KEYWORD,gmail,Proxy,force-remote-dns
+DOMAIN-KEYWORD,instagram,Proxy,force-remote-dns
+DOMAIN-KEYWORD,twitter,Proxy,force-remote-dns
+DOMAIN-KEYWORD,youtube,Proxy,force-remote-dns
+
+DOMAIN-SUFFIX,t.co,Proxy,force-remote-dns
+DOMAIN-SUFFIX,twimg.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,kenengba.com,Proxy,force-remote-dns
+DOMAIN-SUFFIX,t66y.com,Proxy,force-remote-dns
+
+DOMAIN-SUFFIX,amazonaws.com,Proxy
+DOMAIN-SUFFIX,android.com,Proxy
+DOMAIN-SUFFIX,angularjs.org,Proxy
+DOMAIN-SUFFIX,appspot.com,Proxy
+DOMAIN-SUFFIX,akamaihd.net,Proxy
+DOMAIN-SUFFIX,amazon.com,Proxy
+DOMAIN-SUFFIX,bit.ly,Proxy
+DOMAIN-SUFFIX,bitbucket.org,Proxy
+DOMAIN-SUFFIX,blog.com,Proxy
+DOMAIN-SUFFIX,blogcdn.com,Proxy
+DOMAIN-SUFFIX,blogger.com,Proxy
+DOMAIN-SUFFIX,blogcdn.com,Proxy
+DOMAIN-SUFFIX,blogger.com,Proxy
+DOMAIN-SUFFIX,blogsmithmedia.com,Proxy
+DOMAIN-SUFFIX,box.net,Proxy
+DOMAIN-SUFFIX,bloomberg.com,Proxy
+DOMAIN-SUFFIX,chromium.org,Proxy
+DOMAIN-SUFFIX,cl.ly,Proxy
+DOMAIN-SUFFIX,cloudfront.net,Proxy
+DOMAIN-SUFFIX,cloudflare.com,Proxy
+DOMAIN-SUFFIX,cocoapods.org,Proxy
+DOMAIN-SUFFIX,crashlytics.com,Proxy
+DOMAIN-SUFFIX,dmm.co.jp,Proxy
+DOMAIN-SUFFIX,dribbble.com,Proxy
+DOMAIN-SUFFIX,dropbox.com,Proxy
+DOMAIN-SUFFIX,dropboxstatic.com,Proxy
+DOMAIN-SUFFIX,dropboxusercontent.com,Proxy
+DOMAIN-SUFFIX,docker.com,Proxy
+DOMAIN-SUFFIX,duckduckgo.com,Proxy
+DOMAIN-SUFFIX,digicert.com,Proxy
+DOMAIN-SUFFIX,dnsimple.com,Proxy
+DOMAIN-SUFFIX,edgecastcdn.net,Proxy
+DOMAIN-SUFFIX,engadget.com,Proxy
+DOMAIN-SUFFIX,eurekavpt.com,Proxy
+DOMAIN-SUFFIX,fb.me,Proxy
+DOMAIN-SUFFIX,fbcdn.net,Proxy
+DOMAIN-SUFFIX,fc2.com,Proxy
+DOMAIN-SUFFIX,feedburner.com,Proxy
+DOMAIN-SUFFIX,fabric.io,Proxy
+DOMAIN-SUFFIX,flickr.com,Proxy
+DOMAIN-SUFFIX,fastly.net,Proxy
+DOMAIN-SUFFIX,ggpht.com,Proxy
+DOMAIN-SUFFIX,github.com,Proxy
+DOMAIN-SUFFIX,github.io,Proxy
+DOMAIN-SUFFIX,githubusercontent.com,Proxy
+DOMAIN-SUFFIX,github.io,Proxy
+DOMAIN-SUFFIX,githubusercontent.com,Proxy
+DOMAIN-SUFFIX,golang.org,Proxy
+DOMAIN-SUFFIX,goo.gl,Proxy
+DOMAIN-SUFFIX,gstatic.com,Proxy
+DOMAIN-SUFFIX,godaddy.com,Proxy
+DOMAIN-SUFFIX,gravatar.com,Proxy
+DOMAIN-SUFFIX,imageshack.us,Proxy
+DOMAIN-SUFFIX,imgur.com,Proxy
+DOMAIN-SUFFIX,jshint.com,Proxy
+DOMAIN-SUFFIX,ift.tt,Proxy
+DOMAIN-SUFFIX,itunes.com,Proxy
+DOMAIN-SUFFIX,j.mp,Proxy
+DOMAIN-SUFFIX,kat.cr,Proxy
+DOMAIN-SUFFIX,linode.com,Proxy
+DOMAIN-SUFFIX,linkedin.com,Proxy
+DOMAIN-SUFFIX,licdn.com,Proxy
+DOMAIN-SUFFIX,lithium.com,Proxy
+DOMAIN-SUFFIX,megaupload.com,Proxy
+DOMAIN-SUFFIX,mobile01.com,Proxy
+DOMAIN-SUFFIX,modmyi.com,Proxy
+DOMAIN-SUFFIX,mzstatic.com,Proxy
+DOMAIN-SUFFIX,nytimes.com,Proxy
+DOMAIN-SUFFIX,name.com,Proxy
+DOMAIN-SUFFIX,openvpn.net,Proxy
+DOMAIN-SUFFIX,openwrt.org,Proxy
+DOMAIN-SUFFIX,ow.ly,Proxy
+DOMAIN-SUFFIX,pinboard.in,Proxy
+DOMAIN-SUFFIX,ssl-images-amazon.com,Proxy
+DOMAIN-SUFFIX,sstatic.net,Proxy
+DOMAIN-SUFFIX,stackoverflow.com,Proxy
+DOMAIN-SUFFIX,staticflickr.com,Proxy
+DOMAIN-SUFFIX,squarespace.com,Proxy
+DOMAIN-SUFFIX,symcd.com,Proxy
+DOMAIN-SUFFIX,squarespace.com,Proxy
+DOMAIN-SUFFIX,symcd.com,Proxy
+DOMAIN-SUFFIX,symcb.com,Proxy
+DOMAIN-SUFFIX,symauth.com,Proxy
+DOMAIN-SUFFIX,ubnt.com,Proxy
+DOMAIN-SUFFIX,thepiratebay.org,Proxy
+DOMAIN-SUFFIX,tumblr.com,Proxy
+DOMAIN-SUFFIX,twitch.tv,Proxy
+DOMAIN-SUFFIX,wikipedia.com,Proxy
+DOMAIN-SUFFIX,wikipedia.org,Proxy
+DOMAIN-SUFFIX,wikimedia.org,Proxy
+DOMAIN-SUFFIX,wordpress.com,Proxy
+DOMAIN-SUFFIX,wsj.com,Proxy
+DOMAIN-SUFFIX,wsj.net,Proxy
+DOMAIN-SUFFIX,wp.com,Proxy
+DOMAIN-SUFFIX,vimeo.com,Proxy
+DOMAIN-SUFFIX,youtu.be,Proxy
+DOMAIN-SUFFIX,ytimg.com,Proxy
 
 # Workaround for some apps
 # Instagram
