change apple to DIRECT

--- a/rules.conf
+++ b/rules.conf
@@ -181,9 +181,9 @@ DOMAIN-SUFFIX, itunes.apple.com, DIRECT
 DOMAIN-SUFFIX, dl.google.com, DIRECT
 
 # Apple services
-DOMAIN-SUFFIX, apple.com, Proxy
-DOMAIN-SUFFIX, icloud.com, Proxy
-DOMAIN-SUFFIX, mzstatic.com, Proxy
+DOMAIN-SUFFIX, apple.com, DIRECT
+DOMAIN-SUFFIX, icloud.com, DIRECT
+DOMAIN-SUFFIX, mzstatic.com, DIRECT
 DOMAIN-KEYWORD, aka, Proxy
 
 # Streaming services, comment out if you don't need
